
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct tl_type {char* id; int params_num; long long params_types; char* print_id; int flags; scalar_t__ real_id; scalar_t__ constructors; scalar_t__ constructors_num; scalar_t__ name; } ;


 int TL_ERROR (char*,char*) ;
 int assert (int) ;
 int lrand48 () ;
 int memcpy (char*,char const*,int) ;
 int tl_type_tree ;
 int total_types_num ;
 int tree_insert_tl_type (int ,struct tl_type*,int ) ;
 struct tl_type** tree_lookup_value_tl_type (int ,struct tl_type*) ;
 int vkprintf (int,char*,char*) ;
 int zfree (char*,int) ;
 void* zmalloc (int) ;
 char* zstrdup (char*) ;

struct tl_type *tl_add_type (const char *_id, int len, int params_num, long long params_types) {
  char *id = zmalloc (len + 1);
  memcpy (id, _id, len);
  id[len] = 0;
  vkprintf (2, "Add type %s\n", id);
  struct tl_type _t = {.id = id};
  struct tl_type **_r = 0;
  if ((_r = tree_lookup_value_tl_type (tl_type_tree, &_t))) {
    zfree (id, len + 1);
    if (params_num >= 0 && ((*_r)->params_num != params_num || (*_r)->params_types != params_types)) {
      TL_ERROR ("Wrong params_num or types for type %s\n", (*_r)->id);
      return 0;
    }
    return *_r;
  }
  struct tl_type *t = zmalloc (sizeof (*t));
  t->id = id;
  t->print_id = zstrdup (t->id);
  int i;
  for (i = 0; i < len; i++) if (t->print_id[i] == '.' || t->print_id[i] == '#' || t->print_id[i] == ' ') {
    t->print_id[i] = '$';
  }
  t->name = 0;
  t->constructors_num = 0;
  t->constructors = 0;
  t->flags = 0;
  t->real_id = 0;
  if (params_num >= 0) {
    assert (params_num <= 64);
    t->params_num = params_num;
    t->params_types = params_types;
  } else {
    t->flags |= 4;
    t->params_num = -1;
  }
  tl_type_tree = tree_insert_tl_type (tl_type_tree, t, lrand48 ());
  total_types_num ++;
  return t;
}
